--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -1,6 +1,6 @@
 .input {
   padding: 10px;
-  width: 200px;
+  width: 100px;
   margin-bottom: 10px;
   margin-left: 10px;
 }
@@ -12,4 +12,16 @@
   margin-top: 10px;
   background-color: white;
   cursor: pointer;
+}
+
+@media (min-width: 400px) {
+  .input {
+    width: 200px;
+  }
+}
+
+@media (min-width: 590px) {
+  .input {
+    margin-right: 40px;
+  }
 }
