Optimization for Lighthouse

--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -10,6 +10,7 @@
   padding-left: 40px;
   padding-right: 40px;
   margin-top: 10px;
+  margin-bottom: 10px;
   background-color: white;
   cursor: pointer;
 }
