--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,14 @@
+/* commissioner-regular - latin */
+@font-face {
+  font-family: "Commissioner";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("fonts/commissioner-v5-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("fonts/commissioner-v5-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 body {
   font-family: "Commissioner", sans-serif;
   min-width: 360px;
