--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -15,6 +15,10 @@
   cursor: pointer;
 }
 
+.btn:focus {
+  background-color: rgb(231, 224, 224);
+}
+
 @media (min-width: 400px) {
   .input {
     width: 200px;
